Modificacion inicial de la api y formato

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /.vscode
 /gui/pycache
 Last Loaded esquema.pdsbak
+esquema.pdsprj.DESKTOP-ARG8B3L.Kevin.workspace
+Backup Of esquema.pdsbak
+arduino/send.py
